# galgame

./: .gitignore
.trae/documents/: 修复主菜单按钮无响应并稳定所有交互.md  修复设置交互并统一玻璃遮罩（前端JS_CSS_HTML）.md  前后端联调与后端内存缓存实现方案.md  古风成人向 Galgame（顾晚线）剧情与网页引擎实施计划.md  完成顾晚线剧情并提取为单一JSON文件的实施计划.md
galgameserver/: .gitignore  plot.md  server.cpp  server.hpp
galgameserver/data/: route_gu_wan.json
galgameserver/data/route_gu_wan_scenes/: gw_001_intro.json  (+36 more)
galgameserver/webroot/: 404.html  500.html  audio_manager.js  engine.js  index.html  renderer.js  router.js  save_manager.js  script_loader.js  state.js  styles.css
scripts/: split_route_gu_wan_scenes.ps1  split_route_gu_wan_scenes.py
server/: CMakeLists.txt  server.cpp  server.hpp
server/data/route_gu_wan_scenes/: gw_008_seal_check.json  gw_015_side_talk.json  gw_016_truth_hint.json  gw_017_source.json  gw_020_probe_person.json  gw_026_explanation.json  gw_028_follow.json  gw_035_extend_1.json  gw_037_aftercare.json  gw_038_together.json  gw_052_ending_be.json  gw_053_deep_talk_1.json  gw_061_morning_after.json
server/model/concurrent/: concurrent_bitset.hpp  concurrent_multimap.hpp  concurrent_priority_queue.hpp  concurrent_queue.hpp  concurrent_set.hpp  concurrent_stack.hpp  concurrent_unordered_set.hpp  container.hpp
server/model/container/: container.hpp  simulate_base.hpp  simulate_exception.hpp  simulate_imitate.hpp  simulate_list.hpp  simulate_map.hpp  simulate_pointer.hpp  simulate_queue.hpp  simulate_set.hpp  simulate_tree.hpp  simulate_vector.hpp
server/model/network/agreement/: auxiliary.hpp  http.hpp  protocol.hpp
server/model/network/business/: example.json  forwarder.hpp
server/model/network/crypt/: encryption.hpp
server/model/network/session/: conversation.hpp
server/model/sched/: integration.hpp  scheduling.hpp  unit.hpp  worker.hpp
server/scripts/: split_route_gu_wan_scenes.ps1  static_server.ps1
server/webroot/: 404.html  audio_manager.js  engine.js  index.html  placeholder_images.js  renderer.js  router.js  save_manager.js  script_loader.js  state.js  styles.css
server/webroot/assets/bg/: bg_rain_alley_01.txt  bg_river_dock_01.txt  bg_study_room_01.txt
server/webroot/assets/cg/: cg_gw_door_confession_01.txt  cg_gw_hand_hold_bridge_01.txt  cg_gw_lantern_hug_01.txt  cg_gw_rain_tea_closeup_01.txt
server/webroot/assets/char/: char_gu_wan_angry_firm.txt  char_gu_wan_default.txt  char_gu_wan_gentle.txt
server/webroot/data/route_gu_wan_scenes/: gw_001_intro.json  gw_004_ledger_start.json  gw_006_night_store.json  gw_007_compare.json  gw_009_clue_room.json  gw_012_press_accountant.json  gw_018_offer.json  gw_022_night_continue.json  gw_023_confront.json  gw_027_pressure_bridge.json  gw_033_fix_ledger.json  gw_034_comfort.json  gw_036_r18_rain_tea.json  gw_051_ending_ne.json
webroot/: engine.js  placeholder_images.js  renderer.js  router.js  state.js
(+36 files in other folders)
